--- a/css/styles.css
+++ b/css/styles.css
@@ -29,14 +29,12 @@ img {
 }
 .section {
   padding: 120px 0 120px 0;
-  max-width: 1158px;
 }
 
 /* Header section */
 
 .header-section {
   border-bottom: 1px solid #e7e9fc;
-  width: 1158px;
 }
 .header-container {
   background-color: #fff;
@@ -83,6 +81,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.32px;
   padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .page-links-list .page-links-item:hover,
 .page-links-list .page-links-item:focus {
@@ -107,6 +106,7 @@ address {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-item:hover,
@@ -119,6 +119,13 @@ address {
 .hero-section {
   background-color: #2e2f42;
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero/img-1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .hero-container {
@@ -151,6 +158,7 @@ address {
   height: 56px;
   border: none;
   border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -176,6 +184,7 @@ address {
 .principles-container {
   background-color: #fff;
 }
+
 .principles-list {
   display: flex;
   flex-direction: row;
@@ -186,6 +195,14 @@ address {
   width: calc((100% - 3 * 24px) / 4);
   flex-grow: 1;
 }
+.principles-icon-container {
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  background: var(--CLOUD, #f4f4fd);
+  padding: 24px 100px;
+  margin-bottom: 8px;
+}
+
 .principles-name {
   color: #2e2f42;
   font-size: 20px;
@@ -210,6 +227,9 @@ address {
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
   width: calc((100% - 3 * 24px) / 4);
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .team-title {
   color: #2e2f42;
@@ -228,7 +248,7 @@ address {
   gap: 24px;
 }
 .team-inner {
-  padding: 32px 0;
+  padding-top: 32px;
 }
 .team-name {
   color: #2e2f42;
@@ -245,6 +265,41 @@ address {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  margin-bottom: 8px;
+}
+.team-socials-wrap {
+  padding-bottom: 32px;
+}
+.team-socials-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+.team-socials-item {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.team-socials-link {
+  background-color: #4d5ae5;
+  flex-shrink: 0;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-socials-link:hover,
+.team-socials-link:focus {
+  background-color: #404bbf;
+}
+.team-socials-icon {
+  fill: #f4f4fd;
 }
 
 /* Portfolio section */
@@ -271,8 +326,13 @@ address {
   gap: 24px;
   row-gap: 48px;
 }
+.portfolio-wrapper {
+  position: relative;
+  overflow: hidden;
+}
 .portfolio-item {
   width: calc((100% - 2 * 24px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item-name {
   color: #2e2f42;
@@ -288,12 +348,42 @@ address {
   line-height: 1.5;
   letter-spacing: 0.32px;
 }
+.portfolio-picture {
+}
+.portfolio-overlay {
+  color: var(--CLOUD, #f4f4fd);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  background-color: #4d5ae5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
 
+  display: flex;
+  padding: 40px 32px 0 32px;
+}
+.portfolio-item:hover .portfolio-overlay {
+  transform: translateY(0);
+}
+.portfolio-item:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
 /* Footer */
 
 .footer-section {
   background-color: #2e2f42;
   padding: 100px 0;
+}
+.footer-container {
+  display: inline-flex;
+  gap: 120px;
 }
 .logo-footer {
   color: #4d5ae5;
@@ -316,4 +406,38 @@ address {
   line-height: 1.5;
   letter-spacing: 0.32px;
   width: 264px;
+}
+.footer-socials-wrapper {
+}
+.footer-socials-name {
+  color: var(--WHITE, #fff);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+.footer-socials-list {
+  display: inline-flex;
+  gap: 16px;
+}
+.footer-socials-item {
+  display: flex;
+}
+.footer-socials-link {
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-socials-link:hover,
+.footer-socials-link:focus {
+  background-color: #31d0aa;
+}
+.footer-socials-icon {
+  fill: #f4f4fd;
 }
