--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
 body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
@@ -9,12 +5,40 @@ body {
   font-style: normal;
   text-decoration: none;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+ul,
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 a {
+  color: currentColor;
   text-decoration: none;
 }
-ul {
-  list-style-type: none;
+button {
+  padding: 0;
+  font-family: inherit;
+  color: currentColor;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
+
 main {
   flex-grow: 1;
   margin: 0;
@@ -35,6 +59,9 @@ img {
 
 .header-section {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   background-color: #fff;
@@ -83,6 +110,21 @@ img {
   padding: 24px 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.page-links-item.active {
+  color: var(--OCEAN, #404bbf);
+  position: relative;
+}
+.page-links-item.active::after {
+  content: '';
+  border-radius: 2px;
+  background: var(--OCEAN, #404bbf);
+  width: 48px;
+  height: 4px;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  display: block;
+}
 .page-links-list .page-links-item:hover,
 .page-links-list .page-links-item:focus {
   color: #404bbf;
@@ -126,6 +168,8 @@ address {
     url(../images/hero/img-1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
+  max-width: 1440px;
 }
 
 .hero-container {
@@ -201,6 +245,10 @@ address {
   background: var(--CLOUD, #f4f4fd);
   padding: 24px 100px;
   margin-bottom: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
 }
 
 .principles-name {
@@ -248,7 +296,7 @@ address {
   gap: 24px;
 }
 .team-inner {
-  padding-top: 32px;
+  padding: 32px 0;
 }
 .team-name {
   color: #2e2f42;
@@ -267,9 +315,7 @@ address {
   letter-spacing: 0.32px;
   margin-bottom: 8px;
 }
-.team-socials-wrap {
-  padding-bottom: 32px;
-}
+
 .team-socials-list {
   display: flex;
   justify-content: center;
@@ -282,7 +328,9 @@ address {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .team-socials-link {
   background-color: #4d5ae5;
   flex-shrink: 0;
@@ -292,7 +340,6 @@ address {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-socials-link:hover,
 .team-socials-link:focus {
@@ -365,7 +412,7 @@ address {
   height: 100%;
 
   display: flex;
-  padding: 40px 32px 0 32px;
+  padding: 40px 32px;
 }
 .portfolio-item:hover .portfolio-overlay {
   transform: translateY(0);
@@ -382,8 +429,12 @@ address {
   padding: 100px 0;
 }
 .footer-container {
-  display: inline-flex;
+  display: flex;
   gap: 120px;
+  align-items: baseline;
+}
+.footer-wrapper {
+  margin-right: 120px;
 }
 .logo-footer {
   color: #4d5ae5;
@@ -418,7 +469,7 @@ address {
   margin-bottom: 16px;
 }
 .footer-socials-list {
-  display: inline-flex;
+  display: flex;
   gap: 16px;
 }
 .footer-socials-item {
